Finish add Documents

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,6 @@ en:
     page:
       select_parent_page: Select parent page
       latest_update_date: Last update date
+      files: Files
+      images: Images
+      documents: Documents
