--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -11,3 +11,6 @@ es:
     page:
       select_parent_page: Selecciona página principal
       latest_update_date: Fecha de última actualización
+      files: Archivos
+      images: Imágenes
+      documents: Documentos
