Finish add documents

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,3 +14,13 @@ en:
       files: Files
       images: Images
       documents: Documents
+    document:
+      name: Name
+      type: Type
+      uploaded_at: Uploaded at
+      choose_file_text: Choose documents
+      non_selected_text: No documents selected
+    image:
+      choose_file_text: Choose images
+      non_selected_text: No images selected
+    
