--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -14,3 +14,13 @@ es:
       files: Archivos
       images: Imágenes
       documents: Documentos
+    document:
+      name: Nombre
+      type: Tipo
+      uploaded_at: Fecha de creación
+      choose_file_text: Selecciona un documento
+      non_selected_text: Documentos no seleccionados
+    image:
+      choose_file_text: Selecciona una imagen
+      non_selected_text: Imágenes no seleccionadas
+    
