--- a/config/locales/defaults/es.yml
+++ b/config/locales/defaults/es.yml
@@ -6,3 +6,4 @@ es:
       date_twelve_hours: '%Y-%m-%d %I:%M %p' # 2022-05-11 02:33PM
   save: Guardar
   cancel: Cancelar
+  no_records_found: ¡Aún no hay registros que mostrar!
