Functionality to upload files (#62)
* Finish add Documents

* Finish add documents

* Ignoring .DS_Store

* removing DSStore

* Use bali level and clean code

* Fix review

* Fix review comments

* Fix review comments with removing spaces and typo on specs names

* Fix some test and new code

--- a/config/locales/defaults/es.yml
+++ b/config/locales/defaults/es.yml
@@ -4,3 +4,6 @@ es:
     pm: pm
     formats:
       date_twelve_hours: '%Y-%m-%d %I:%M %p' # 2022-05-11 02:33PM
+  save: Guardar
+  cancel: Cancelar
+  no_records_found: ¡Aún no hay registros que mostrar!
