--- a/config/locales/defaults/en.yml
+++ b/config/locales/defaults/en.yml
@@ -4,3 +4,6 @@ en:
     pm: pm
     formats:
       date_twelve_hours: '%Y-%m-%d %I:%M%p' # 2022-05-11 02:33PM
+  save: Save
+  cancel: Cancel
+  no_records_found: So sorry, no records found!
