--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,7 +10,7 @@ es:
   documentation:
     page:
       select_parent_page: Selecciona página principal
-      latest_update_date: Fecha de última actualización
+      latest_update_date: Última actualización
       attachments: Adjuntar archivos
       images: Imágenes
       files: Archivos
